GRAD2-2580 (GRAD) Fix User Request Distribution Run options - Part 2 - CUR and Null Distribution Dates